# er-split-dodge-run

./: .gitignore  LICENSE  README.md  c0000.hks
bind/: me3-profile.example.toml  separate_roll_and_sprint.ini
bind/mod/action/script/: c0000.hks
native/: CMakeLists.txt  README.md  bridge_config.hpp  cspc_key_config_live_binds.hpp  cspc_key_config_probe.cpp  cspc_key_config_rva.txt  dash_key_parse.hpp  dash_pad_parse.hpp  dash_xinput.hpp  hks_pattern_scan.hpp  separate_roll_and_sprint.cpp  separate_roll_and_sprint.ini
native/cmake/: generate_cspc_symbols.cmake
